--- a/config.json
+++ b/config.json
@@ -2,11 +2,13 @@
     "window_size": [800, 600],
     "block_size": 25,
     "play_area_rect": [250, 0, 300, 600],
-    "gravity": 981,
-    "gravity_factor": 0.5,
+    "gravity": 98,
+    "gravity_factor": 1,
     "spawn_location": [300, 50],
     "movement_rate" : 10,
     "UI_rect": [600, 100, 200, 800],
     "text_size": 24,
-    "button_size": [100, 50]
+    "button_size": [100, 50],
+    "slider_rect": [600, 500, 100, 50],
+    "slider_range": [1, 20]
 }
